add notifcation with redux support

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,8 @@
     "no-shadow": "off",
     "no-unused-vars": "off",
     "prefer-const": "off",
-    "object-curly-spacing": "off",
+    "object-curly-spacing": 2,
+    "object-curly-newline": "off",
     "import/prefer-default-export": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
