--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
     "history": "4.10.1",
+    "i18next": "^19.8.7",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
@@ -45,6 +48,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.5",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
