--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.19",
+    "material-ui-flags": "^1.2.4",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
